--- a/content/post/2020-09-20-r-rmarkdown.Rmd
+++ b/content/post/2020-09-20-r-rmarkdown.Rmd
@@ -5,6 +5,7 @@ date: 2020-09-21
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 output: md_document
+always_allow_html: true
 ---
 
 ```{r setup, include=FALSE}
