--- a/content/post/2020-09-20-r-rmarkdown.Rmd
+++ b/content/post/2020-09-20-r-rmarkdown.Rmd
@@ -4,8 +4,8 @@ author: "Dawit Aberra"
 date: 2020-09-21
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
-output: md_document
-always_allow_html: true
+output: html_document
+
 ---
 
 ```{r setup, include=FALSE}
