--- a/content/post/2020-09-20-r-rmarkdown.Rmd
+++ b/content/post/2020-09-20-r-rmarkdown.Rmd
@@ -32,7 +32,7 @@ We start by installing the R packages that  will be needed to produce libraries 
 
 ```
 
-## Getting and Preparing Data
+## Getting and Cleaning Data
 
 We will get the data for the S&P 500 Index, symbol = ^GSPC,  from Yahoo! Finance. We will then prepare the data for visualization and/or Summarization  of results as needed. 
 
