--- a/content/post/math.Rmd
+++ b/content/post/math.Rmd
@@ -31,10 +31,17 @@ require(mosaicCalc)
 
 
 
+```{r echo=T, message=F, warning=F}
+
+## Given g(x)=3*x^2 -2*x +1, find g(2)  #base R, that is,no extra package is used.
+g <- function(x){3*x^2 -2*x +1}
+g(2)
+```
+
 
 ```{r echo=T, message=F, warning=F}
 
-## Given g(x)=3*x^2 -2*x +1, find g(2). 
+## Given g(x)=3*x^2 -2*x +1, find g(2)  ##mosaic
 g<-makeFun(3*x^2 -2*x +1 ~ x)
 g(2)
 
@@ -44,42 +51,25 @@ g(2)
 
 ```{r echo=T, message=F, warning=F}
 
-## Given g(x)=3*x^2 -2*x +1, find g(2) (same probem as before 
-## but using base R, not the Mosaic package)
-g <- function(x){3*x^2 -2*x +1}
-g(2)
+##Plot the function y=3x^2-x-2 on the interval [-10, 10]  ##base R
+
+curve(3*x^2 -2*x +1, -10, 10)
+
 ```
-
-
 
 
 ```{r echo=T, message=F, warning=F}
 
-## Plot the function y=3x^2-x-2 on the interval [-10, 10]
+## Plot the function y=3x^2-x-2 on the interval [-10, 10]  ##moasaic
 plotFun(3*x^2 -2*x +1 ~x, x.lim=range(-10,10) )
 
 ```
 
 
 
-
-
 ```{r echo=T, message=F, warning=F}
 
-##Plot the function y=3x^2-x-2 on the interval [-10, 10] 
-##same problem as before but using base R, not the Mosaic package
-curve(3*x^2 -2*x +1, -10, 10)
-
-```
-
-
-
-
-
-```{r echo=T, message=F, warning=F}
-
-## Plot the function y=3x^2-x-2 on the interval [-10, 10]. 
-## Use ggplot2
+## Plot the function y=3x^2-x-2 on the interval [-10, 10].  ##ggplot2
 library("ggplot2")
 eq = function(x){3*x^2 -2*x +1}
 g<-ggplot(data.frame(x=c(-10, 10)), aes(x=x))
