--- a/content/post/math.Rmd
+++ b/content/post/math.Rmd
@@ -86,10 +86,19 @@ g
 ```{r echo=T, message=F, warning=F }
 
 ## Solve the equation x^2 +x -6=0 for x.
-findZeros(x^2 +x -6 ~ x,x.lim=range(-Inf, Inf))
+findZeros(x^2 +x -6 ~ x, x.lim=range(-Inf, Inf))
 
 ```
 
+```{r}
+## Solve a system of linear equatiioms
+##   solve the system:  2x + 3y = 5 
+##                      3x - y = 7   for x and y. 
+A<-matrix(c(2,3,5,-1), nrow=2, ncol=2, byrow=TRUE) ## see ?matrix
+b<-matrix(c(5,7), nrow=2, ncol=1, byrow=TRUE)
+solve(A,b)
+
+```
 
 
 
