--- a/content/post/math.Rmd
+++ b/content/post/math.Rmd
@@ -23,9 +23,8 @@ The best software for doing mathematics may be Mathematica, Maple, MatLab, Sage 
 
 
 ```{r echo=T, message=F, warning=F}
-
-require(mosaic)
-require(mosaicCalc)
+library(mosaic)
+library(mosaicCalc)
 
 ```
 
@@ -105,7 +104,7 @@ solve(A,b)
 
 ```{r echo=T, message=F, warning=F}
 
-## Given F(x)= 3*x^2 - 2*x +1, find F'(2)  (derivative of F at x=2)
+## Given F(x)= 3*x^2 - 2*x +1, find F'(2)  (derivative of F at x=2)  ##mosaicCal
 g<- D(3*x^2 -2*x + 1 ~ x)
 g(2)
 
@@ -117,7 +116,7 @@ g(2)
 
 ```{r echo=T, message=F, warning=F}
 
-## Evaluate the definite integral \int_{-1}^{2}(x^2-2x+1)dx
+## Evaluate the definite integral \int_{-1}^{2}(x^2-2x+1)dx       ##mosaicCal
 F<-antiD(x^2-2*x+1 ~ x)
 F(2)-F(1)
 
