--- a/content/post/math.Rmd
+++ b/content/post/math.Rmd
@@ -23,9 +23,11 @@ The best software for doing mathematics may be Mathematica, Maple, MatLab, Sage 
 
 
 ```{r echo=T, message=F, warning=F}
+## Required libraries
 library(mosaic)
 library(mosaicCalc)
 library(calculus)
+library("ggplot2")
 
 ```
 
@@ -52,7 +54,6 @@ g(2)
 ```{r echo=T, message=F, warning=F}
 
 ##Plot the function y=3x^2-x-2 on the interval [-10, 10]  ## base R
-
 curve(3*x^2 -2*x +1, -10, 10)
 
 ```
@@ -70,16 +71,12 @@ plotFun(3*x^2 -2*x +1 ~x, x.lim=range(-10,10) )
 ```{r echo=T, message=F, warning=F}
 
 ## Plot the function y=3x^2-x-2 on the interval [-10, 10].  ##ggplot2
-library("ggplot2")
 eq = function(x){3*x^2 -2*x +1}
 g<-ggplot(data.frame(x=c(-10, 10)), aes(x=x))
 g<-g+ stat_function(fun=eq)
 g
 
 ```
-
-
-
 
 
 
@@ -90,15 +87,21 @@ findZeros(x^2 +x -6 ~ x, x.lim=range(-Inf, Inf))
 
 ```
 
+
+
 ```{recho=T, message=F, warning=F }
+
 ## Solve a system of linear equatiioms
 ##   solve the system:  2x + 3y = 5 
 ##                      5x - y = 7   for x and y. 
+
 A<-matrix(c(2,3,5,-1), nrow=2, ncol=2, byrow=TRUE) ## see ?matrix
 b<-matrix(c(5,7), nrow=2, ncol=1, byrow=TRUE)
 solve(A,b)
 
 ```
+
+
 
 ```{r echo=T, message=F, warning=F}
 ## Find the derivative of the function f(x)= 2x^3+3x^2 +2x -5sin^2(x) +ln(x)      ## "calculus" package
