--- a/content/post/math.Rmd
+++ b/content/post/math.Rmd
@@ -101,6 +101,12 @@ solve(A,b)
 
 ```
 
+```{r echo=T, message=F, warning=F}
+## Find the derivative of the function f(x)= 2x^3+3x^2 +2x -5sin^2(x) +ln(x)      ##mosaicCal
+
+D(2*x^3 + 3*x^2 +2*x - 5*sin(x)^2 + log(x) ~ x)
+
+```
 
 
 ```{r echo=T, message=F, warning=F}
@@ -108,6 +114,8 @@ solve(A,b)
 derivative(f = "2*x^3 + 3*x^2 +2*x - 5*sin(x)^2 + log(x)", var = "x")
 
 ```
+
+
 
 ```{r echo=T, message=F, warning=F}
 
