--- a/public/about/index.Rmd
+++ b/public/about/index.Rmd
@@ -11,4 +11,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Stories
 
-This blog site is maintained by Dawit Aberra. For question or comments, contact at aberrad@fvsu.edu
+This blog site is maintained by Dawit Aberra. For question or comments, contact at aberrad@fvsu.edu.
