--- a/public/about2/index.Rmd
+++ b/public/about2/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "index"
 author: "D. Aberra"
-date: "2024-05-18"
+date: "05/20/2024"
 output: html_document
 ---
 
@@ -11,4 +11,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Stories
 
-This blog site is maintained by Dawit Aberra. For question or comments, contact at aberrad@fvsu.edu.
+This blog site is maintained by Dawit Aberra. For question or comments, write email:  aberrad@fvsu.edu.
